--- a/software/gui/index.html
+++ b/software/gui/index.html
@@ -360,7 +360,7 @@
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>function openSettings() {</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>console.log('Settings button clicked');</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>// Add settings modal logic here</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>window.location.href = '/settings.html';</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>}</span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>function emergencyStop() {</span></p>
