Add touchscreen interface for monitoring and controlling environmental parameters
- Implemented a responsive HTML layout with a top bar, navigation bar, and main content area.
- Created sections for sensor readings, VPD display, equipment status, alerts, and room summaries.
- Added interactive elements for adjusting VPD setpoints and toggling equipment states.
- Included real-time updates for time, sensor values, and VPD metrics.
- Styled the interface with a modern design using CSS gradients and animations.

--- a/touchscreen/index.html
+++ b/touchscreen/index.html
@@ -344,7 +344,7 @@
         }
 
         function openSettings() {
-            console.log('Settings button clicked');
+            window.location.href = './settings.html';
             // Add settings modal logic here
         }
 
