Implement VPD setpoint update via backend API and handle sensor data display for humidity readings

--- a/touchscreen/index.html
+++ b/touchscreen/index.html
@@ -1014,8 +1014,22 @@
             if (newSetpoint && !isNaN(newSetpoint)) {
                 const value = parseFloat(newSetpoint);
                 if (value >= VPD_MIN && value <= VPD_MAX) {
-                    currentVPD = value;
-                    updateVPDDisplay();
+                    // Send to backend API
+                    fetch('/api/setpoint', {
+                        method: 'POST',
+                        headers: {'Content-Type': 'application/json'},
+                        body: JSON.stringify({vpd_target: value})
+                    })
+                    .then(response => response.json())
+                    .then(data => {
+                        console.log('Setpoint updated:', data);
+                        currentVPD = value;
+                        updateVPDDisplay();
+                    })
+                    .catch(error => {
+                        console.error('Error updating setpoint:', error);
+                        alert('Failed to update setpoint');
+                    });
                 } else {
                     alert(`VPD must be between ${VPD_MIN} and ${VPD_MAX} kPa`);
                 }
@@ -1069,8 +1083,11 @@
                     
                     // Mark other zones as N/A since no sensors
                     document.querySelector('[data-sensor="zone2-temp"]').innerHTML = 'N/A';
+                    document.querySelector('[data-sensor="zone2-humid"]').innerHTML = 'N/A';
                     document.querySelector('[data-sensor="zone3-temp"]').innerHTML = 'N/A';
+                    document.querySelector('[data-sensor="zone3-humid"]').innerHTML = 'N/A';
                     document.querySelector('[data-sensor="zone4-temp"]').innerHTML = 'N/A';
+                    document.querySelector('[data-sensor="zone4-humid"]').innerHTML = 'N/A';
                 })
                 .catch(error => console.error('Error fetching sensors:', error));
             
