Add sensor manager, hardware test script, and setup script for Raspberry Pi; update GUI script for automated updates

--- a/touchscreen/index.html
+++ b/touchscreen/index.html
@@ -984,11 +984,11 @@
         }
 
         function openSettings() {
-            window.location.href = './settings.html';
+            window.location.href = '/settings';
         }
 
         function openAnalytics() {
-            window.location.href = './analytics.html';
+            window.location.href = '/analytics';
         }
 
         function emergencyStop() {
