Refactor summary grid to update temperature and humidity labels and IDs for improved clarity

--- a/touchscreen/index.html
+++ b/touchscreen/index.html
@@ -781,12 +781,12 @@
                         <div class="summary-label">Humidity</div>
                     </div>
                     <div class="summary-item">
-                        <div class="summary-value" id="avg-dewpoint">--°F</div>
-                        <div class="summary-label">Dew Point</div>
+                        <div class="summary-value" id="avg-temp">--°F</div>
+                        <div class="summary-label">Temperature</div>
                     </div>
                     <div class="summary-item">
-                        <div class="summary-value" id="water-activity">--</div>
-                        <div class="summary-label">Water Activity</div>
+                        <div class="summary-value" id="avg-humid">--%</div>
+                        <div class="summary-label">Humidity</div>
                     </div>
                 </div>
             </div>
