Refactor summary grid to encapsulate summary values and labels in a unified structure for better organization

--- a/touchscreen/index.html
+++ b/touchscreen/index.html
@@ -773,13 +773,6 @@
                     <div class="card-title">Room Averages</div>
                 </div>
                 <div class="summary-grid">
-                    <div class="summary-value" id="avg-temp">--°F</div>
-                        <div class="summary-label">Temperature</div>
-                    </div>
-                    <div class="summary-item">
-                        <div class="summary-value" id="avg-humid">--%</div>
-                        <div class="summary-label">Humidity</div>
-                    </div>
                     <div class="summary-item">
                         <div class="summary-value" id="avg-temp">--°F</div>
                         <div class="summary-label">Temperature</div>
@@ -787,6 +780,14 @@
                     <div class="summary-item">
                         <div class="summary-value" id="avg-humid">--%</div>
                         <div class="summary-label">Humidity</div>
+                    </div>
+                    <div class="summary-item">
+                        <div class="summary-value" id="avg-dewpoint">--°F</div>
+                        <div class="summary-label">Dew Point</div>
+                    </div>
+                    <div class="summary-item">
+                        <div class="summary-value" id="water-activity">--</div>
+                        <div class="summary-label">Water Activity</div>
                     </div>
                 </div>
             </div>
