--- a/touchscreen/index.html
+++ b/touchscreen/index.html
@@ -392,13 +392,14 @@
             position: relative;
             width: 100%;
             max-width: 260px;
-            height: 40px;
-            margin: 20px 0;
-            border-radius: 20px;
-            overflow: visible;
+            height: 18px;  /* Keep original height */
+            margin-top: 20px;
+            border-radius: 9px;  /* Keep original radius */
+            overflow: hidden;  /* Changed from visible to hidden to show gradient */
             background: linear-gradient(
                 to right,
                 #FF0000 0%,
+                #FF3333 5%,
                 #FF6666 10%,
                 #FF9900 20%,
                 #FFCC00 30%,
@@ -414,28 +415,33 @@
                 #FFCC00 70%,
                 #FF9900 80%,
                 #FF6666 90%,
+                #FF3333 95%,
                 #FF0000 100%
             );
-            box-shadow: inset 0 2px 10px rgba(0,0,0,0.5), 0 0 1px rgba(255,255,255,0.2);
+            box-shadow: inset 0 2px 8px rgba(0,0,0,0.4), 0 1px 2px rgba(0,0,0,0.3);
         }
 
+        /* Make sure gauge-fill is hidden */
         .gauge-fill {
             display: none !important;
-            visibility: hidden !important;
-            opacity: 0 !important;
         }
 
         .gauge-indicator {
             position: absolute;
-            top: 50%;
+            top: -3px;  /* Keep original positioning */
             width: 4px;
-            height: 150%;
+            height: 24px;  /* Keep original height */
             background: white;
             border-radius: 2px;
-            transform: translate(-50%, -50%);
-            transition: left 0.3s ease, background 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
+            transition: left 0.5s ease, background 0.3s ease, box-shadow 0.3s ease;
             z-index: 10;
-            box-shadow: 0 0 10px rgba(255,255,255,0.8);
+        }
+
+        /* Remove the arrows if they're causing issues with the small gauge */
+        .gauge-indicator::before,
+        .gauge-indicator::after {
+            display: none;
         }
 
         .gauge-indicator::before {
