--- a/touchscreen/index.html
+++ b/touchscreen/index.html
@@ -180,6 +180,30 @@
             box-shadow: 0 4px 10px rgba(255, 0, 0, 0.4);
         }
 
+        .start-button {
+            background: linear-gradient(135deg, rgba(0, 195, 16, 0.2), rgba(0, 227, 21, 0.1));
+            border: 1px solid rgba(0, 195, 16, 0.4);
+        }
+
+        .start-button:hover {
+            background: linear-gradient(135deg, #00C310, #00E515);
+            box-shadow: 0 4px 10px rgba(0, 195, 16, 0.4);
+        }
+
+        .hold-button {
+            background: linear-gradient(135deg, rgba(136, 88, 237, 0.2), rgba(102, 51, 187, 0.1));
+            border: 1px solid rgba(136, 88, 237, 0.3);
+        }
+
+        .hold-button:hover {
+            background: linear-gradient(135deg, #FFA500, #FF8C00);
+            box-shadow: 0 4px 10px rgba(255, 165, 0, 0.4);
+        }
+
+        .hold-button.active {
+            background: linear-gradient(135deg, #FFA500, #FF8C00);
+        }
+
         /* MAIN CONTAINER - Adjusted for screen size */
         .main-container {
             position: absolute;
@@ -752,12 +776,26 @@
                 <span>Analytics</span>
             </button>
         </div>
-        <button class="nav-button emergency-button" onclick="emergencyStop()">
-            <svg viewBox="0 0 24 24" fill="currentColor">
-                <rect x="4" y="4" width="16" height="16" rx="2"/>
-            </svg>
-            <span>EMERGENCY STOP</span>
-        </button>
+        <div class="nav-buttons" style="display: flex; gap: 6px; align-items: center;">
+            <button class="nav-button start-button" id="start-btn">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <polygon points="5,3 19,12 5,21 5,3"/>
+                </svg>
+                <span>Start</span>
+            </button>
+            <button class="nav-button hold-button" id="hold-btn">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <rect x="6" y="4" width="12" height="16" rx="2"/>
+                </svg>
+                <span>Hold</span>
+            </button>
+            <button class="nav-button emergency-button" onclick="emergencyStop()">
+                <svg viewBox="0 0 24 24" fill="currentColor">
+                    <rect x="4" y="4" width="16" height="16" rx="2"/>
+                </svg>
+                <span>EMERGENCY STOP</span>
+            </button>
+        </div>
     </div>
 
     <!-- MAIN CONTAINER -->
@@ -998,6 +1036,7 @@
         const VPD_TARGET_MIN = 1.2;
         const VPD_TARGET_MAX = 1.3;
         let currentVPD = 1.25;
+        let cycleState = 'idle'; // 'idle', 'running', 'holding', 'emergency'
 
         // Update time
         function updateTime() {
@@ -1130,6 +1169,8 @@
                 fetch('/api/emergency-stop', { 
                     method: 'POST' 
                 }).catch(err => console.error('Emergency stop API error:', err));
+                cycleState = 'emergency';
+                updateButtonStates();
             }
         }
 
@@ -1184,6 +1225,73 @@
                 }
             }
         }
+
+        // Button state management
+        function updateButtonStates() {
+            const startBtn = document.getElementById('start-btn');
+            const holdBtn = document.getElementById('hold-btn');
+            const emergencyBtn = document.querySelector('.emergency-button');
+
+            if (startBtn) startBtn.disabled = cycleState !== 'idle';
+            if (holdBtn) holdBtn.disabled = cycleState === 'idle' || cycleState === 'emergency';
+
+            if (cycleState === 'holding') {
+                holdBtn.classList.add('active');
+            } else {
+                holdBtn.classList.remove('active');
+            }
+
+            if (cycleState === 'emergency') {
+                // Flash screen red briefly
+                document.body.style.background = '#FF4444';
+                setTimeout(() => { document.body.style.background = 'linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%)'; }, 500);
+            }
+        }
+
+        // Start cycle
+        document.addEventListener('DOMContentLoaded', function() {
+            const startBtn = document.getElementById('start-btn');
+            if (startBtn) {
+                startBtn.addEventListener('click', () => {
+                    if (cycleState !== 'idle') return;
+                    if (confirm('Start drying/curing cycle?')) {
+                        fetch('/api/start-cycle', {
+                            method: 'POST',
+                            headers: {'Content-Type': 'application/json'},
+                            body: JSON.stringify({ mode: 'dry', target_vpd: 1.1, setpoint_aw: 0.62 })
+                        })
+                        .then(response => response.json())
+                        .then(data => {
+                            console.log('Cycle started:', data);
+                            cycleState = 'running';
+                            updateButtonStates();
+                        })
+                        .catch(err => console.error('Start cycle error:', err));
+                    }
+                });
+            }
+
+            // Hold cycle
+            const holdBtn = document.getElementById('hold-btn');
+            if (holdBtn) {
+                holdBtn.addEventListener('click', () => {
+                    if (cycleState !== 'running') return;
+                    const isHolding = cycleState === 'holding';
+                    fetch('/api/hold-cycle', {
+                        method: 'POST',
+                        headers: {'Content-Type': 'application/json'},
+                        body: JSON.stringify({ maintain_vpd: currentVPD, resume: isHolding })
+                    })
+                    .then(response => response.json())
+                    .then(data => {
+                        console.log('Cycle hold toggled:', data);
+                        cycleState = isHolding ? 'running' : 'holding';
+                        updateButtonStates();
+                    })
+                    .catch(err => console.error('Hold cycle error:', err));
+                });
+            }
+        });
 
         // MAIN UPDATE FUNCTION - Combines all updates
         function updateDashboard() {
@@ -1294,6 +1402,12 @@
                             }
                         });
                     }
+                    
+                    // Sync cycle state from backend
+                    if (data.cycle_state) {
+                        cycleState = data.cycle_state;
+                        updateButtonStates();
+                    }
                 })
                 .catch(error => console.error('Error fetching status:', error));
         }
@@ -1331,6 +1445,7 @@
         document.addEventListener('DOMContentLoaded', function() {
             updateTime();
             updateVPDDisplay();
+            updateButtonStates();
             updateDashboard();
             
             // Set up intervals
