Implement state management for process recovery: add StateManager class to handle loading and saving system state, and integrate state recovery in main process flow

--- a/touchscreen/index.html
+++ b/touchscreen/index.html
@@ -1048,6 +1048,11 @@
         let totalPhaseDays = 0;
         let processStartTime = null;
 
+        function updateButtonStates() {
+            // This function would update start/stop buttons if you had them
+            // For now, just leave it empty to prevent the error
+        }
+
         // Function to get real data from your Python controller
         function updateFromController() {
             fetch('/api/status')
