Update equipment item attributes: replace onclick equipment identifiers with data attributes for improved data handling

--- a/touchscreen/index.html
+++ b/touchscreen/index.html
@@ -970,27 +970,27 @@
                     <div class="card-title">Equipment Status</div>
                 </div>
                 <div class="equipment-grid">
-                    <div class="equipment-item on" onclick="toggleEquipment(this, 'mini-split')">
+                    <div class="equipment-item on" data-equipment="mini_split" onclick="toggleEquipment(this, 'mini-split')">
                         <div class="equipment-name">Mini-Split</div>
                         <div class="equipment-status-text">ON</div>
                     </div>
-                    <div class="equipment-item idle" onclick="toggleEquipment(this, 'dehumidifier')">
+                    <div class="equipment-item idle" data-equipment="dehum" onclick="toggleEquipment(this, 'dehumidifier')">
                         <div class="equipment-name">Dehumidifier</div>
                         <div class="equipment-status-text">IDLE</div>
                     </div>
-                    <div class="equipment-item off" onclick="toggleEquipment(this, 'humidifier')">
+                    <div class="equipment-item off" data-equipment="hum" onclick="toggleEquipment(this, 'humidifier')">
                         <div class="equipment-name">Humidifier</div>
                         <div class="equipment-status-text">OFF</div>
                     </div>
-                    <div class="equipment-item on" onclick="toggleEquipment(this, 'erv')">
+                    <div class="equipment-item on" data-equipment="erv" onclick="toggleEquipment(this, 'erv')">
                         <div class="equipment-name">ERV</div>
                         <div class="equipment-status-text">ON</div>
                     </div>
-                    <div class="equipment-item on" onclick="toggleEquipment(this, 'supply-fan')">
+                    <div class="equipment-item on" data-equipment="vent" onclick="toggleEquipment(this, 'supply-fan')">
                         <div class="equipment-name">Supply Fan</div>
                         <div class="equipment-status-text">60%</div>
                     </div>
-                    <div class="equipment-item on" onclick="toggleEquipment(this, 'exhaust-fan')">
+                    <div class="equipment-item on" data-equipment="vent" onclick="toggleEquipment(this, 'exhaust-fan')">
                         <div class="equipment-name">Exhaust Fan</div>
                         <div class="equipment-status-text">60%</div>
                     </div>
