--- a/touchscreen/settings.html
+++ b/touchscreen/settings.html
@@ -760,7 +760,7 @@
         }
 
         // API Configuration
-        const API_URL = 'http://localhost:5000/api';
+        const API_URL = '/api';
         
         // Load Settings from Backend
         async function loadSettings() {
@@ -981,11 +981,11 @@
 
         // Navigation
         function goHome() {
-            window.location.href = './index.html';
+            window.location.href = '/';
         }
 
         function goToAnalytics() {
-            window.location.href = './analytics.html';
+            window.location.href = '/analytics';
         }
 
         // Initialize
