Add navigation functions for home and settings

--- a/touchscreen/analytics.html
+++ b/touchscreen/analytics.html
@@ -795,6 +795,15 @@
             }
         }
 
+        // Navigation functions
+        function goHome() {
+            window.location.href = '/';
+        }
+
+        function goToSettings() {
+            window.location.href = '/settings';
+        }
+
         // Global chart variable
         let mainChart = null;
         
