Fix syntax error in promise handling for equipment toggle response

--- a/touchscreen/index.html
+++ b/touchscreen/index.html
@@ -1824,7 +1824,7 @@
                 }
             })
             .then(response => response.json())
-            .then data => {
+            .then(data => {
                 console.log(`Toggled ${equipmentId}:`, data);
                 if (data.success) {
                     // Update will happen on next dashboard update
